--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "@mui/x-data-grid": "^5.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^5.0.0",
+    "svgo": "^2.8.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
