--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "postinstall": "npm run webpack",
+    "webpack": "webpack",
     "start": "NODE_ENV=production react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
