--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "postinstall": "npm run webpack",
-    "webpack": "webpack",
-    "start": "NODE_ENV=production react-scripts --openssl-legacy-provider start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
