--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://frimpongsarfok.github.io/sdi8_project_one",
   "name": "animal_crossing_project_1",
   "version": "0.1.0",
   "private": true,
@@ -15,11 +16,14 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "postdeploy": "echo 'Deployed to GitHub Pages'",
     "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-    
+  
   },
   "eslintConfig": {
     "extends": [
@@ -48,6 +52,7 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "babel-loader": "^9.1.3",
+    "gh-pages": "^6.1.0",
     "material-ui-popup-state": "^2.0.0",
     "react-router-dom": "^6.2.1"
   }
