--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://frimpongsarfok.github.io/sdi8_project_one",
+  "homepage": "https://frimpongsarfok.github.io/sdi8_project_one",
   "name": "animal_crossing_project_1",
   "version": "0.1.0",
   "private": true,
