--- a/.gitignore
+++ b/.gitignore
@@ -16,13 +16,9 @@
 .env.local
 .env.development.local
 .env.test.local
-.env.production.local
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 node_modules
-node_modules
-node_modules
-node_modules
-node_modules
+package-lock.json
